--- a/test.html
+++ b/test.html
@@ -53,6 +53,8 @@
 
                 // Call the changeColors function every 50 milliseconds
                 setInterval(changeColors, 50);
+            function chanageColor2(){
+            }
             });
     </script>
 </body>
